k8s/auth-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
        - name: auth-container
          image: samanehfa/auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
