k8s/discount-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-backend
  template:
    metadata:
      labels:
        app: discount-backend
    spec:
      containers:
        - name: discount-container
          image: valerietxh/discount-backend:latest
          ports:
            - containerPort: 3002
