k8s/client-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-frontend-service
spec:
  selector:
    app: client-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
