k8s/discount-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discount-backend-service
spec:
  selector:
    app: discount-backend
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
