k8s/items-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: items-service
spec:
  selector:
    app: items
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
